WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131912
Text bounding box computation for simple line layout is wrong
https://bugs.webkit.org/show_bug.cgi?id=131912
Summary
Text bounding box computation for simple line layout is wrong
Antti Koivisto
Reported
2014-04-20 03:54:08 PDT
Top-left is currently the first line top-left which is not always correct.
Attachments
patch
(24.63 KB, patch)
2014-04-20 07:25 PDT
,
Antti Koivisto
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2
(463.08 KB, application/zip)
2014-04-20 08:21 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion
(491.16 KB, application/zip)
2014-04-20 08:40 PDT
,
Build Bot
no flags
Details
another
(26.85 KB, patch)
2014-04-20 09:21 PDT
,
Antti Koivisto
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-04-20 07:25:14 PDT
Created
attachment 229762
[details]
patch
Antti Koivisto
Comment 2
2014-04-20 07:25:43 PDT
<
rdar://problem/16670337
>
Build Bot
Comment 3
2014-04-20 08:21:00 PDT
Comment on
attachment 229762
[details]
patch
Attachment 229762
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/6141224452882432
New failing tests: fast/repaint/reflection-redraw.html
Build Bot
Comment 4
2014-04-20 08:21:05 PDT
Created
attachment 229763
[details]
Archive of layout-test-results from webkit-ews-13 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-13 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 5
2014-04-20 08:40:29 PDT
Comment on
attachment 229762
[details]
patch
Attachment 229762
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.appspot.com/results/5333486596521984
New failing tests: fast/repaint/reflection-redraw.html
Build Bot
Comment 6
2014-04-20 08:40:35 PDT
Created
attachment 229764
[details]
Archive of layout-test-results from webkit-ews-06 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-06 Port: mac-mountainlion Platform: Mac OS X 10.8.5
Antti Koivisto
Comment 7
2014-04-20 09:21:53 PDT
Created
attachment 229765
[details]
another
Andreas Kling
Comment 8
2014-04-20 10:38:04 PDT
Comment on
attachment 229765
[details]
another r=me
Antti Koivisto
Comment 9
2014-04-20 10:44:35 PDT
https://trac.webkit.org/r167568
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug